--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="metatags generator">
 	<meta name="robots" content="index, follow">
 	<meta name="revisit-after" content="1 month">
-	<title>Bootstrap Toggle</title>
+	<title>Bootstrap Toggles</title>
 	<link rel="canonical" href="http://www.bootstraptoggle.com">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/github.min.css" rel="stylesheet" >
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
